[package]
name = "crust_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-keyring = "6.0.0"
subxt ="0.22.0"
subxt-codegen ="0.22.0"
scale-info = { version = "2.0.0", features = ["bit-vec"] }
sp-core = { version = "6.0.0", default-features = false  }
sp-runtime = { version = "6.0.0", default-features = false  }
