[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo = "0.8.0"
serde = "1.0.130"
serde_json = "1.0.72"
stylist = { version = "0.10.1", features=["yew"]}
wasm-bindgen = "0.2.82"
web-sys = {version = "0.3.59", features=["HtmlInputElement"]}